third_party/rust/thiserror/v1/crate/tests/ui/transparent-struct-source.stderr
error: transparent error struct can't contain #[source]
 --> tests/ui/transparent-struct-source.rs:5:18
  |
5 | pub struct Error(#[source] anyhow::Error);
  |                  ^^^^^^^^^
